--- a/QuanLyThuVien1/QLyDAL/QLyDAL.vbproj
+++ b/QuanLyThuVien1/QLyDAL/QLyDAL.vbproj
@@ -63,6 +63,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataBaseAccess.vb" />
     <Compile Include="LoginDAL.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -98,6 +99,12 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\QLyDTO\QLyDTO.vbproj">
+      <Project>{6db3b006-d0d7-408f-a771-313db88f051c}</Project>
+      <Name>QLyDTO</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
