--- a/QuanLyThuVien1/QLyGUI/QLyGUI.vbproj
+++ b/QuanLyThuVien1/QLyGUI/QLyGUI.vbproj
@@ -76,6 +76,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmLapthe.Designer.vb">
+      <DependentUpon>frmLapthe.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmLapthe.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmLogin.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -100,6 +106,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="frmLapthe.resx">
+      <DependentUpon>frmLapthe.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.vb</DependentUpon>
     </EmbeddedResource>
