--- a/QuanLyThuVien1/QLyGUI/App.config
+++ b/QuanLyThuVien1/QLyGUI/App.config
@@ -3,4 +3,9 @@
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    
+  <appSettings>
+    <add key="ConnectionString" value="Data Source=LAPTOP-07947GSM;Initial Catalog=TVDataBs;Integrated Security=True"/>
+  </appSettings>
+
 </configuration>
