--- a/QuanLyThuVien1/QLyGUI/QLyGUI.vbproj
+++ b/QuanLyThuVien1/QLyGUI/QLyGUI.vbproj
@@ -136,6 +136,10 @@
       <Project>{87c8461c-fcf3-43c1-b7d3-7cd66a251b84}</Project>
       <Name>QLyBUS</Name>
     </ProjectReference>
+    <ProjectReference Include="..\QLyDAL\QLyDAL.vbproj">
+      <Project>{121d83b4-1d0f-43a7-a291-a17fecc7c8cf}</Project>
+      <Name>QLyDAL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\QLyDTO\QLyDTO.vbproj">
       <Project>{6db3b006-d0d7-408f-a771-313db88f051c}</Project>
       <Name>QLyDTO</Name>
