--- a/QuanLyThuVien1/QLyBUS/QLyBUS.vbproj
+++ b/QuanLyThuVien1/QLyBUS/QLyBUS.vbproj
@@ -80,6 +80,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="TiepnhansachBUS.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
