--- a/QuanLyThuVien1/QLyDAL/QLyDAL.vbproj
+++ b/QuanLyThuVien1/QLyDAL/QLyDAL.vbproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataBaseAccess.vb" />
+    <Compile Include="FindDAL.vb" />
     <Compile Include="LaptheDAL.vb" />
     <Compile Include="LoginDAL.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
