--- a/QuanLyThuVien1/QLyBUS/QLyBUS.vbproj
+++ b/QuanLyThuVien1/QLyBUS/QLyBUS.vbproj
@@ -63,6 +63,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FindBUS.vb" />
     <Compile Include="laptheBUS.vb" />
     <Compile Include="LoginBUS.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
