--- a/QuanLyThuVien1/QLyDTO/QLyDTO.vbproj
+++ b/QuanLyThuVien1/QLyDTO/QLyDTO.vbproj
@@ -63,7 +63,8 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FindDTO.vb" />
+    <Compile Include="FindBookDTO.vb" />
+    <Compile Include="FindReaderDTO.vb" />
     <Compile Include="LaptheDTO.vb" />
     <Compile Include="LoginDTO.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
