--- a/QuanLyThuVien1/QLyGUI/App.config
+++ b/QuanLyThuVien1/QLyGUI/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="QLyGUI.My.MySettings.TVDataBsConnectionString" connectionString="Data Source=LAPTOP-07947GSM;Initial Catalog=TVDataBs;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
