--- a/QuanLyThuVien1/QLyGUI/QLyGUI.vbproj
+++ b/QuanLyThuVien1/QLyGUI/QLyGUI.vbproj
@@ -155,6 +155,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TVDataBsDataSet2.xsd</DependentUpon>
     </Compile>
+    <Compile Include="TVDataBsDataSet3.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TVDataBsDataSet3.xsd</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="frmFind.resx">
@@ -230,6 +235,17 @@
     </None>
     <None Include="TVDataBsDataSet2.xss">
       <DependentUpon>TVDataBsDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="TVDataBsDataSet3.xsc">
+      <DependentUpon>TVDataBsDataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="TVDataBsDataSet3.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TVDataBsDataSet3.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TVDataBsDataSet3.xss">
+      <DependentUpon>TVDataBsDataSet3.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
