--- a/QuanLyThuVien1/QLyBUS/QLyBUS.vbproj
+++ b/QuanLyThuVien1/QLyBUS/QLyBUS.vbproj
@@ -82,6 +82,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="ReportBUS.vb" />
     <Compile Include="TiepnhansachBUS.vb" />
   </ItemGroup>
   <ItemGroup>
