--- a/QuanLyThuVien1/QLyDAL/QLyDAL.vbproj
+++ b/QuanLyThuVien1/QLyDAL/QLyDAL.vbproj
@@ -85,6 +85,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="ReportDAL.vb" />
     <Compile Include="TiepnhansachDAL.vb" />
   </ItemGroup>
   <ItemGroup>
