--- a/QuanLyThuVien1/QLyGUI/QLyGUI.vbproj
+++ b/QuanLyThuVien1/QLyGUI/QLyGUI.vbproj
@@ -119,6 +119,12 @@
     <Compile Include="frmMuonTraSach.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmReport.Designer.vb">
+      <DependentUpon>frmReport.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmReport.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -182,6 +188,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMuonTraSach.resx">
       <DependentUpon>frmMuonTraSach.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmReport.resx">
+      <DependentUpon>frmReport.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmTiepnhanSach.resx">
       <DependentUpon>frmTiepnhanSach.vb</DependentUpon>
