duy moi cap nhat

--- a/QuanLyThuVien1/QLyBUS/QLyBUS.vbproj
+++ b/QuanLyThuVien1/QLyBUS/QLyBUS.vbproj
@@ -67,6 +67,7 @@
     <Compile Include="FindReaderBUS.vb" />
     <Compile Include="laptheBUS.vb" />
     <Compile Include="LoginBUS.vb" />
+    <Compile Include="MuonTraSachBUS.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
