--- a/QuanLyThuVien1/QLyGUI/QLyGUI.vbproj
+++ b/QuanLyThuVien1/QLyGUI/QLyGUI.vbproj
@@ -171,6 +171,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TVDataBsDataSet4.xsd</DependentUpon>
     </Compile>
+    <Compile Include="TVDataBsDataSet5.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TVDataBsDataSet5.xsd</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="frmFind.resx">
@@ -271,6 +276,17 @@
     </None>
     <None Include="TVDataBsDataSet4.xss">
       <DependentUpon>TVDataBsDataSet4.xsd</DependentUpon>
+    </None>
+    <None Include="TVDataBsDataSet5.xsc">
+      <DependentUpon>TVDataBsDataSet5.xsd</DependentUpon>
+    </None>
+    <None Include="TVDataBsDataSet5.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TVDataBsDataSet5.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TVDataBsDataSet5.xss">
+      <DependentUpon>TVDataBsDataSet5.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
