--- a/QuanLyThuVien1/QLyDTO/QLyDTO.vbproj
+++ b/QuanLyThuVien1/QLyDTO/QLyDTO.vbproj
@@ -84,6 +84,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="QuyDinhDocGiaDTO.vb" />
+    <Compile Include="QuyDinhMuonSachDTO.vb" />
     <Compile Include="ReportDTO.vb" />
     <Compile Include="TiepnhansachDTO.vb" />
   </ItemGroup>
