--- a/QuanLyThuVien1/QLyBUS/QLyBUS.vbproj
+++ b/QuanLyThuVien1/QLyBUS/QLyBUS.vbproj
@@ -84,6 +84,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="QuyDinhDocGiaBUS.vb" />
+    <Compile Include="QuyDinhMuonSachBUS.vb" />
     <Compile Include="ReportBUS.vb" />
     <Compile Include="TiepnhansachBUS.vb" />
   </ItemGroup>
