--- a/QuanLyThuVien1/QLyDTO/QLyDTO.vbproj
+++ b/QuanLyThuVien1/QLyDTO/QLyDTO.vbproj
@@ -66,7 +66,7 @@
     <Compile Include="FindBookDTO.vb" />
     <Compile Include="FindReaderDTO.vb" />
     <Compile Include="LaptheDTO.vb" />
-    <Compile Include="LoaiDocGiaDTO.vb" />
+    <Compile Include="QuyDinhTheLoaiSachDTO.vb" />
     <Compile Include="LoginDTO.vb" />
     <Compile Include="MuonTraSachDTO.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
