--- a/QuanLyThuVien1/QLyGUI/QLyGUI.vbproj
+++ b/QuanLyThuVien1/QLyGUI/QLyGUI.vbproj
@@ -200,6 +200,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TVDataBsDataSet5.xsd</DependentUpon>
     </Compile>
+    <Compile Include="TVDataBsDataSet6.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TVDataBsDataSet6.xsd</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="frmFind.resx">
@@ -323,6 +328,17 @@
     </None>
     <None Include="TVDataBsDataSet5.xss">
       <DependentUpon>TVDataBsDataSet5.xsd</DependentUpon>
+    </None>
+    <None Include="TVDataBsDataSet6.xsc">
+      <DependentUpon>TVDataBsDataSet6.xsd</DependentUpon>
+    </None>
+    <None Include="TVDataBsDataSet6.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TVDataBsDataSet6.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TVDataBsDataSet6.xss">
+      <DependentUpon>TVDataBsDataSet6.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
