--- a/QuanLyThuVien1/QLyDAL/QLyDAL.vbproj
+++ b/QuanLyThuVien1/QLyDAL/QLyDAL.vbproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataBaseAccess.vb" />
+    <Compile Include="DoiMatKhauDAL.vb" />
     <Compile Include="FindBookDAL.vb" />
     <Compile Include="FindReaderDAL.vb" />
     <Compile Include="LaptheDAL.vb" />
@@ -90,6 +91,7 @@
     <Compile Include="QuyDinhDocGiaDAL.vb" />
     <Compile Include="QuyDinhMuonSachDAL.vb" />
     <Compile Include="ReportDAL.vb" />
+    <Compile Include="TaoTaiKhoanDAL.vb" />
     <Compile Include="TiepnhansachDAL.vb" />
   </ItemGroup>
   <ItemGroup>
